# psittacus

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  arguments.h  client.h  fmt.h  letter.h  main.cc  non_copyable.h  notification.h  options.h  parrot.h  remote.h  seqpacket.h  session.h  split_string.h  unix_fd.h  unix_rc.h
